nullaway_error_ead2280e-8f9d-441c-a157-42b078cd432f.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/AbstractInstanceRegistry.java:769: error: [NullAway] enhanced-for expression remoteRegions is @Nullable
            for (String remoteRegion : remoteRegions) {
                                       ^
